update 2: local test run check